# cryptographic-zapier

./: BLOCKCHAIN_GUIDE.md  package.json  pnpm-lock.yaml  schema.ts
app/: globals.css  layout.tsx
app/(authenticated)/explore/: page.tsx  template-card.tsx
app/(authenticated)/orgs/: page.tsx  pending-invitations.tsx
app/(authenticated)/welcome/: page.tsx
app/(authenticated)/workflows/: create-workflow-button.tsx  page.tsx
app/actions/organization/: index.ts
app/actions/pull-request/: index.ts
components/: app-sidebar.tsx  blockchain-commit-button.tsx  blockchain-toolbar.tsx  google-connection.tsx  node-output-panel.tsx  org-canvas.tsx  org-git-controls.tsx  org-save-indicator.tsx  wallet-button.tsx  workflow-execution.tsx  workflow-selector.tsx  workflow-settings.tsx  workflow-top-left.tsx  workflow-top-right.tsx
components/collaboration/: visual-workflow-diff.tsx  workflow-diff.tsx
drizzle/: 0001_collaboration.sql  0002_member_status.sql
hooks/: use-blockchain-commit.ts
lib/: redis-cache.ts  templates.ts  workflow-executor-new.ts  workflow-executor.ts
lib/collaboration/: diff.ts  secrets.ts
lib/engine/: credentials.ts  index.ts  interpolation.ts  node-schemas.ts  rate-limit.ts  resolver.ts  schema.ts  types.ts
lib/solana/: blockchain-actions.tsx  config.ts  instructions.ts  queries.ts  transactions.ts
providers/: node-dropzone.tsx  node-outputs.tsx  org-workflow.tsx  solana-wallet.tsx  workflow.tsx
solana-program/: Cargo.toml  DEPLOY-ONLINE.md  README.md
solana-program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
(+55 files in other folders)
